# price-monitor

./: .gitignore  .pylintrc  README.md  price_monitor.py  pyproject.toml  validator.env
requirements/: local.txt  requirements.txt
src/price_monitor/: feed_helper.py  feeds_to_monitor.py  price_monitor.py  validator.env
tests/: test_main.py
